--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,8 @@
 	// "homepage_url": "https://github.com/zotero/make-it-red",
 	"applications": {
 		"zotero": {
-			"id": "zotero-copy-pdf@infty.fun",
-			"update_url": "https://zotero-download.s3.amazonaws.com/tmp/make-it-red/updates-2.0.json",
+			"id": "zotero-pdf-copy@infty.fun",
+			// "update_url": "https://zotero-download.s3.amazonaws.com/tmp/make-it-red/updates-2.0.json",
 			"strict_min_version": "7.0",
 			"strict_max_version": "7.99.*"
 		}
