Add permissions to GitHub Actions workflow for release artifact uploads

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,9 @@ jobs:
   build-and-release:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # Required to create a release and upload artifacts
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
