--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     tags:
-      - '*' # Listen to all tag push events
+      - 'v*' # Listen to all tag push events
 
 jobs:
   build-and-release:
@@ -63,6 +63,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git add update.json  # Add update.json to staging
           git commit -m "Update update.json after build"  # Commit the changes
-          git push origin ${{ github.ref }}  # Push changes to the same branch or tag
+          git push origin
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
