--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -63,6 +63,6 @@ jobs:
           git config --global user.email "actions@github.com"
           git add update.json  # Add update.json to staging
           git commit -m "Update update.json after build"  # Commit the changes
-          git push origin
+          git push origin HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
